<resources>
    <string name="app_name">C Merchant</string>
    <string name="app_name_app">Corals Merchant</string>
    <string name="title_activity_dash">Dash</string>
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_reports">Reports</string>
    <string name="title_more">More </string>
    <string name="agree_continue"><![CDATA[Agree & Continue]]></string>
    <string name="terms_conditions_value">Lorem ipsum dolor sit amet,consectetur adipiscing elit,sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Posuere ac ut consequat semper viverra.Felis donec et odio pellentesque.Elementum nisi quis eleifend quam adipiscing vitae proin.Fermentum et sollicitudin ac orci phasellus egestas tellus retrum.Ligula ullamcorper malesuada proin libero</string>
    <string name="terms_conditions_title">Terms &amp; Conditions</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="confirm">Confirm</string>
    <string name="okay">OK</string>
    <string name="dollar">$</string>
    <string name="topup_amount">Topup Amount</string>
    <string name="topup_amount_col">Topup Amount: </string>
    <string name="medium_spender_tier">Medium Spender Tier</string>
    <string name="bonus_awarded">Bonus Awarded</string>
    <string name="low_spender_tier">Low Spender Tier</string>
    <string name="bonus">Bonus</string>
    <string name="input">Input</string>
    <string name="topup">Topup</string>
    <string name="initial_value">0.00</string>
    <string name="review_and_confirm">Review and Confirm</string>
    <string name="success">success</string>
    <string name="code">CODE :</string>
    <string name="search">Search</string>
    <string name="percentage_symbol">%</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="topup_nav">Top Up</string>
    <string name="Top_up">Topup Campaigns</string>
    <string name="secure_pin">Secure PIN</string>
    <string name="history">History</string>
    <string name="my_customers">My Customers</string>
    <string name="log_out">Log Out</string>
    <string name="performance">Insights</string>
    <string name="add_outlets">Add Outlets</string>
    <string name="home">Home</string>
    <string name="activation_code">Activation code</string>
    <string name="initial_timestamp">00:00:00</string>
    <string name="waiting_for_acceptance">Waiting for Acceptance…</string>
    <string name="show_qr_code">Show QR Code</string>
    <string name="notify_to_new_user">This is a new customer. Ask them to enroll in membership program. Click here to send  <a href="sms_body">Invite SMS</a> </string>
    <string name="notify_to_existing_user">This is a existing customer has not enrolled yet to your membership program. Click here to send  <a href="sms_body">Notify User</a> </string>
    <string name="good_status">your are performing better than last</string>
    <string name="equal_status"> your are performing same as last </string>
    <string name="bad_status"> your performance is not as good as last</string>
    <string name="bad_emoji"><b>👎</b>󠀽󠀽󠀽</string>
    <string name="good_emji"><b>👍</b></string>
    <string name="equal_emji"><b>🤝</b></string>
    <string name="good_tip">No tips. You\'re already a champion</string>
    <string name="equal_tip">It is a time to send a message to your customers</string>
    <string name="bad_tip">Issue points to every customer. Remind customer to join membership</string>
    <string name="profile">Profile</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_u"><u>Privacy policies</u></string>
    <string name="terms_and_conditions_u"><u>Terms and Conditions</u></string>
    <string name="insight_msg1">This week, you have awarded 100 points less so far compared to 1000 last week.</string>
    <string name="insight_msg2">Number of customers has reduced by 10 compare to 100 last week. </string>
    <string name="topupconfirmationmsg">Ensure you received money from Customer before clicking Yes and Customer has selected the same amount to top up from their mobile.\n\nCustomer has to scan QR code in next screen.</string>
    <string name="receive_payment">Receive Payments</string>
    <string name="and">and</string>
    <string name="redeem_points">Redeem Points</string>
    <string name="send_message">Send Message</string>
    <string name="product_description">Customer can use this voucher to redeem your product/ service with reward points \ne.g: Get $10 off on your next bill with 500 points</string>
    <string name="bonus_description">Customer can top up their loyalty prepaid wallet using their reward points \ne.g: Redeem $1 worth of wallet balance for 100 points</string>
    <string name="bulk_description">Use this voucher is to offer product / service as a bulk purchase \ne.g: Buy 10 hair cuts and get extra 2 hair cuts free </string>
    <string name="assigned_description">This voucher is to offer free / discounted services as part of bulk buy or separately \ne.g 1: Redeem a Hair cut \ne.g 2: Get 10% off when you present this voucher</string>
    <string name="MGM_description">Make every customer your marketing agent \ne.g: Refer your friend and get 200 points. Your referral gets 20% discount on first purchase</string>
    <string name="product_title">Voucher for Reward Points</string>
    <string name="bonus_title">Wallet Balance for Reward Points</string>
    <string name="bulk_title">Bulk Offer Voucher</string>
    <string name="assigned_title">Assigned Voucher</string>
    <string name="MGM_title">Member Get Member Voucher</string>
    <string name="voucher_types_question">Select a type of voucher you want to create?</string>
</resources>