<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE"
    android:orientation="vertical"
    >
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_voucher_get_List"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/actionbar_round_corner_background"
        android:elevation="4dp"
        android:textAlignment="center"
        app:elevation="4dp"
        app:layout_scrollFlags="scroll|enterAlways"
        app:title="Create Voucher"
        app:titleTextAppearance="@style/toolbarTitle"
        app:titleTextColor="@color/matt_black" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:scrollbars="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/fifteen_dp"
                    android:text="@string/voucher_types_question"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/fifteen_dp"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardview_P"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="15dp"
                        app:cardCornerRadius="5dp"
                        app:cardElevation="4dp"
                        android:focusable="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:minHeight="@dimen/height_100dp"
                            android:orientation="vertical"
                            android:paddingStart="@dimen/fifteen_dp"
                            android:paddingEnd="@dimen/fifteen_dp"
                            android:padding="7dp">

                            <TextView
                                android:textColor="@color/matt_black"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center|start"
                                android:text="@string/product_title"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <TextView
                                android:textColor="@color/grey_d"
                                android:id="@+id/text_desc_p"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/margin_5dp"
                                android:gravity="center|start"
                                android:text="@string/product_description"
                                android:textSize="13sp" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardview_M"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/fifteen_dp"
                        android:layout_marginTop="@dimen/fifteen_dp"
                        android:layout_marginEnd="@dimen/fifteen_dp"
                        app:cardCornerRadius="@dimen/margin_5dp"
                        app:cardElevation="@dimen/padding_4dp"
                        android:focusable="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="@dimen/fifteen_dp"
                            android:paddingEnd="@dimen/fifteen_dp"
                            android:minHeight="@dimen/height_100dp"
                            android:orientation="vertical"
                            android:padding="7dp">

                            <TextView
                                android:textColor="@color/matt_black"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center|start"
                                android:text="@string/MGM_title"
                                android:textSize="@dimen/text_size_16sp"
                                android:textStyle="bold" />

                            <TextView
                                android:textColor="@color/grey_d"
                                android:id="@+id/text_desc_m"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/margin_5dp"
                                android:gravity="center|start"
                                android:text="@string/MGM_description"
                                android:textSize="@dimen/text_size_13sp" />
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardview_Z"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/fifteen_dp"
                        android:layout_marginTop="@dimen/fifteen_dp"
                        android:layout_marginEnd="@dimen/fifteen_dp"
                        app:cardCornerRadius="@dimen/margin_5dp"
                        app:cardElevation="@dimen/padding_4dp"
                        android:focusable="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="@dimen/fifteen_dp"
                            android:paddingEnd="@dimen/fifteen_dp"
                            android:minHeight="@dimen/height_100dp"
                            android:orientation="vertical"
                            android:padding="7dp">

                            <TextView
                                android:textColor="@color/matt_black"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center|start"
                                android:text="@string/assigned_title"
                                android:textSize="@dimen/text_size_16sp"
                                android:textStyle="bold" />

                            <TextView
                                android:textColor="@color/grey_d"
                                android:id="@+id/text_desc_z"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/margin_5dp"
                                android:gravity="center|start"
                                android:text="@string/assigned_description"
                                android:textSize="@dimen/text_size_13sp" />
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardview_U"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/fifteen_dp"
                        android:layout_marginTop="@dimen/fifteen_dp"
                        android:layout_marginEnd="@dimen/fifteen_dp"

                        app:cardCornerRadius="@dimen/margin_5dp"
                        app:cardElevation="@dimen/padding_4dp"
                        android:focusable="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="@dimen/fifteen_dp"
                            android:paddingEnd="@dimen/fifteen_dp"
                            android:minHeight="@dimen/height_100dp"
                            android:orientation="vertical"
                            android:padding="7dp">

                            <TextView
                                android:textColor="@color/matt_black"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center|start"
                                android:text="@string/bulk_title"
                                android:textSize="@dimen/text_size_16sp"
                                android:textStyle="bold" />

                            <TextView
                                android:textColor="@color/grey_d"
                                android:id="@+id/text_desc_u"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/margin_5dp"
                                android:gravity="center|start"
                                android:text="@string/bulk_description"
                                android:textSize="@dimen/text_size_13sp" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardview_B"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/fifteen_dp"
                        android:layout_marginTop="@dimen/fifteen_dp"
                        android:layout_marginEnd="@dimen/fifteen_dp"
                        android:layout_marginBottom="@dimen/height_30dp"
                        app:cardCornerRadius="@dimen/margin_8dp"
                        app:cardElevation="@dimen/padding_4dp"
                        android:focusable="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="@dimen/fifteen_dp"
                            android:paddingEnd="@dimen/fifteen_dp"
                            android:minHeight="@dimen/height_100dp"
                            android:orientation="vertical"
                            android:padding="7dp">

                            <TextView
                                android:textColor="@color/matt_black"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center|start"
                                android:textSize="@dimen/text_size_16sp"
                                android:text="@string/bonus_title"
                                android:textStyle="bold" />

                            <TextView
                                android:textColor="@color/grey_d"
                                android:id="@+id/text_desc_b"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/margin_5dp"
                                android:gravity="center|start"
                                android:text="@string/bonus_description"
                                android:textSize="@dimen/text_size_13sp" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
</LinearLayout>